Client/src/app/player/player.component.scss
:host {
    ion-icon {
        margin: auto 0.25rem;
        width: 2.5rem;
        height: 2.5rem;
    }

    .currently-playing {
        display: flex;
        align-items: center;
    }

    .track-name {
        margin: 0 0.5rem;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
        width: 15rem;
    }

    .track-time {
        margin-right: 0.5rem;
    }

    ion-item {
        --inner-padding-end: 0;
        --padding-start: 0;
    }

    .buttons {
        display: inherit;
    }

    ion-range {
        --knob-size: 16px;
        padding-inline: 1rem;
        padding-top: 0.5rem;
        padding-bottom: 0;
    }

    ion-range::part(pin) {
        padding-inline: 0;
    }
}

